Fixed scrolling of toolbar when vertical and items overflow.
The first item is now fixed to the top when the toolbar is vertical and
icons need to scroll (to preserve the bar).  The gutters (shadows
showing overflow) need work.

--- a/styles/tool-bar.less
+++ b/styles/tool-bar.less
@@ -1,7 +1,6 @@
 // NOTE: color of buttons on hover needs adjusting
 
 .tool-bar {
-    position: relative;
     background: darken(@app-background-color, 0%);
     border: none;
     
@@ -36,6 +35,7 @@
             border-radius: 0;
             
             &:before {
+                // NOTE: should be configured by ui scaling setting
                 font-size: 20px;
             }
         }
